Adding null safety and starting oauth
Changes:
- Adding null safety support from dart programming language
- Created a safe tokenManager for oauth
- Changing backendService structure for oauth support
- Created AuthHelper for managing all user info in the whole app
- Adding encryption to oauth tokens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -32,6 +32,7 @@ dependencies:
   nfc_manager: ^3.0.0+1
   flutter_svg: ^0.22.0
   hex: ^0.2.0
+  flutter_secure_storage: ^4.2.0
 
 dev_dependencies:
   flutter_test:
